--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <h6>Bem vindo ao 40 Mais</h6>
                             <h1><span>Plano 40 mais</span> feito para quem quer mais saúde<span>!</span></h1>
                             <p>Alcance seus objetivos de saúde e condicionamento físico em qualquer estágio.</p>
-                            <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Nossas classes</a>
+                            <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Entrar no Grupo</a>
                         </div>
                     </div>
                 </div>
