--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                                 <br>São Paulo
                             </div>
                             <div class="wrap-phone">Fone:11 94970-2904</div>
-                            <div class="wrap-mail">info@40mais.com</div>
+                            <div class="wrap-mail">amtreinamento@gmail.com</div>
                         </div>
                     </div>
                     <div class="col-md-3 offset-md-1">
