--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
                 <div class="col-md-6 mb-30">
                     <div id="sobre" class="section-title2">Sobre nós</div>
                     <div class="section-title">A História do nosso <span>personal trainer</span></div>
-                    <p class="mb-30">Um bom personal trainer pode ajudar seus clientes a se sentirem melhor. No entanto, um personal trainer excepcional vai além, entregando resultados mensuráveis. Seja perda de peso, ganho de massa muscular, aumento de resistência ou conquistas esportivas, a excelência se traduz em resultados tangíveis que validam o compromisso mútuo.</p>
+                    <p class="mb-30">Com formação em Educação Física e especialização em Atividade Física e Saúde pela renomada Universidade de São Paulo (USP), acumulo mais de 15 anos de sólida experiência na indústria de condicionamento físico, com foco em musculação e gestão de peso.
+
+                        Minha trajetória inclui uma colaboração significativa com algumas das principais academias em Salvador e São Paulo, onde pude aprimorar minhas habilidades e conhecimentos. Recentemente, após a realização de meu próprio estúdio pessoal, direcionei meu empenho para o cenário emergente do treinamento personalizado online.
+                        
+                        Me mantenho continuamente atualizado com as últimas tendências e pesquisas na área, participando ativamente de diversos congressos e cursos relevantes. Assim, aplico meu conhecimento com embasamento científico sólido, respaldado por ampla experiência prática.
+                        
+                        Minha personalidade extrovertida e dinâmica complementa minha abordagem profissional, criando um ambiente envolvente e motivador para meus clientes. Estou comprometido em ajudar indivíduos a alcançarem seus objetivos de saúde e condicionamento físico, adaptando-me às necessidades e expectativas de cada um. Juntos, podemos trabalhar para alcançar o melhor de você e atingir seus objetivos de forma sustentável e saudável. </p>
                     <ul class="list-unstyled list">
                         <li>
                             <div class="list-icon"> <span class="ti-check"></span> </div>
