--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="row">
                 <div class="text-center col-md-12">
-                    <a class="vid" href="https://youtu.be/pJsWKy9y1Cg">
+                    <a class="vid" href="https://www.instagram.com/p/CthgEvcJXFN/">
                         <div class="vid-butn"> <span class="icon"> <i class="ti-control-play"></i> </span> </div>
                     </a>
                 </div>
