--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-md-12 text-center mb-30">
                     <div class="section-title3">Inspiração</div>
-                    <div class="section-title">Explorar a vida <span>Fitness</span></div>
+                    <div class="section-title">Exercício em <span>Casa</span></div>
                 </div>
             </div>
             <div class="row">
