--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="row">
                 <div class="text-center col-md-12">
-                    <a class="vid" href="https://youtube.com/shorts/COKBJBx8VJ8?feature=share">
+                    <a class="vid" href="https://youtu.be/dP9m1NsSFVo">
                         <div class="vid-butn"> <span class="icon"> <i class="ti-control-play"></i> </span> </div>
                     </a>
                 </div>
