--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center mb-30">
-                    <div class="section-title3">Inspiração</div>
+                    <div class="section-title3">Inspiração..</div>
                     <div class="section-title">Exercício em <span>Casa</span></div>
                 </div>
             </div>
