--- a/index.html
+++ b/index.html
@@ -149,60 +149,60 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/1.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Personal Trainers</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Personal Trainers</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/2.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Classe Fitness</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Classe Fitness</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/3.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Plano Nutricional</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Plano Nutricional</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/4.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Treino Online</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Treino Online</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/8.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Cardio Fitness</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Cardio Fitness</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/9.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="classes-single.html">Crossfit Training</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Crossfit Training</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
-                                    <a href="classes-single.html"><i class="ti-arrow-right"></i></a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
