--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="col-md-8 text-center"> 
                             <h6>Bem vindo ao 40 Mais</h6>
                             <h1><span>Plano 40 mais</span> feito para quem quer mais saúde<span>!</span></h1>
-                            <p>Alcance seus objetivos de saúde e condicionamento físico em qualquer estágio.</p>
+                            <p>Alcance seus objetivos de saúde e condicionamento físico treinando em casa.</p>
                             <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Entrar no Grupo</a>
                         </div>
                     </div>
