--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center mb-30">
-                    <div class="section-title3">Nosso Serviço</div>
-                    <div class="section-title">Nossa <span>Classe</span></div>
+                    <div class="section-title3">Nosso Objetivo</div>
+                    <div class="section-title">Treinamento <span>Completo</span></div>
                 </div>
             </div>
             <div class="row">
@@ -149,7 +149,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/1.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Personal Trainers</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Alongamento em Casa</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
                                     <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
@@ -159,7 +159,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/2.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Classe Fitness</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Improvise Aparelhos</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
                                     <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
@@ -199,7 +199,7 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/classes/9.jpg" alt=""> </div>
                             <div class="con">
-                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Crossfit Training</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Defina uma Meta</a></h5>
                                 <div class="line"></div>
                                 <div class="icon">
                                     <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"><i class="ti-arrow-right"></i></a>
