--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Levantamento de peso</a>
+                                    <a href="blog.html">Perca Medidas</a>
                                 </span>
-                                <h5><a href="post.html">O que é um complexo de barra?</a></h5>
+                                <h5><a href="post.html">Como perder medidas treinando em casa?</a></h5>
                             </div>
                         </div>
                         <div class="item">
@@ -268,7 +268,7 @@
                             <div class="con"> <span class="category">
                                     <a href="blog.html">Fitness</a>
                                 </span>
-                                <h5><a href="post.html">Variações de supino com halteres</a></h5>
+                                <h5><a href="post.html">Variações de exercícios usando o próprio peso</a></h5>
                             </div>
                         </div>
                         <div class="item">
