--- a/index.html
+++ b/index.html
@@ -226,73 +226,73 @@
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/13.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>27</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>27</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Perca Medidas</a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Perca Medidas</a>
                                 </span>
-                                <h5><a href="post.html">Como perder medidas treinando em casa?</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Como perder medidas treinando em casa?</a></h5>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/9.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>25</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>25</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
                                     <a href="blog.html">Fitness</a>
                                 </span>
-                                <h5><a href="post.html">Exercícios pliométricos para membros superiores</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Exercícios pliométricos para membros superiores</a></h5>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/3.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>24</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>24</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Training</a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Training</a>
                                 </span>
-                                <h5><a href="post.html">O que é treinamento de tempo?</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">O que é treinamento de tempo?</a></h5>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/14.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>23</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>23</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Fitness</a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Fitness</a>
                                 </span>
-                                <h5><a href="post.html">Variações de exercícios usando o próprio peso</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Variações de exercícios usando o próprio peso</a></h5>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/2.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>22</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>22</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Trainers</a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Trainers</a>
                                 </span>
-                                <h5><a href="post.html">As melhores ferramentas online para treinadores</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">As melhores ferramentas online para treinadores</a></h5>
                             </div>
                         </div>
                         <div class="item">
                             <div class="position-re o-hidden"> <img src="img/slider/4.jpg" alt="">
                                 <div class="date">
-                                    <a href="post.html"> <span>Apr</span> <i>21</i> </a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ"> <span>Apr</span> <i>21</i> </a>
                                 </div>
                             </div>
                             <div class="con"> <span class="category">
-                                    <a href="blog.html">Fitness</a>
+                                    <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Fitness</a>
                                 </span>
-                                <h5><a href="post.html">Trocas criativas de equipamentos de ginástica</a></h5>
+                                <h5><a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ">Trocas criativas de equipamentos de ginástica</a></h5>
                             </div>
                         </div>
                     </div>
