--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <div class="col-md-6 mb-30">
                         <div class="ready v-middle">
                             <h4>Treinamento de teste gratuito</h4>
-                            <p>Marque uma consulta hoje para sua sessão de teste gratuita e sem compromisso com ou sem um de nossos personal trainers.</p> 
+                            <p>Junte-se imediatamente ao nosso grupo gratuito e desbloqueie um mundo de dicas poderosas que podem impulsionar seus resultados em incríveis 100%!</p> 
                             <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Contato</a>
                         </div>
                     </div>
