--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <div class="ready v-middle">
                             <h4>Treinamento de teste gratuito</h4>
                             <p>Junte-se imediatamente ao nosso grupo gratuito e desbloqueie um mundo de dicas poderosas que podem impulsionar seus resultados em incríveis 100%!</p> 
-                            <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Contato</a>
+                            <a href="https://chat.whatsapp.com/ItSxTTZZzL6JEPLYG54SVZ" class="btn-1 button-1">Entrar no Grupo</a>
                         </div>
                     </div>
                     <!-- Testiominals -->
