--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                     <div class="info">
                                         <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                         <div class="cont">
-                                            <h6>Jackson gomes</h6> <span>Aluno turma 1</span>
+                                            <h6>Jackson gomes</h6> <span>Aluno Classe 1</span>
                                         </div>
                                     </div>
                                 </div>
@@ -334,7 +334,7 @@
                                     <div class="info">
                                         <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                         <div class="cont">
-                                            <h6>Emily</h6> <span>Customer Review</span>
+                                            <h6>Emily</h6> <span>Aluna Classe 2</span>
                                         </div>
                                     </div>
                                 </div>
