--- a/index.html
+++ b/index.html
@@ -408,16 +408,16 @@
                             <h4>Horários Abertos</h4>
                             <ul>
                                 <li>
-                                    <div class="tit">Segunda - Sexta</div>
-                                    <div class="dots"></div> <span>06:00 - 22:00</span>
+                                    <div class="tit">Treine de Qualquer Lugar</div>
+                                    <div class="dots"></div> <span></span>
                                 </li>
                                 <li>
-                                    <div class="tit">Sábado</div>
-                                    <div class="dots"></div> <span>08:00 - 17:00</span>
+                                    <div class="tit">Tenha Acesso ilimitado</div>
+                                    <div class="dots"></div> <span></span>
                                 </li>
                                 <li>
-                                    <div class="tit">Domingo</div>
-                                    <div class="dots"></div> <span>Fechado</span>
+                                    <div class="tit">Obtenha Resultados satisfatórios</div>
+                                    <div class="dots"></div> <span></span>
                                 </li>
                             </ul>
                         </div>
