--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                                 <div class="col-md-12">
                                     <p>Assine para aproveitar nossas campanhas e vales-presente.</p>
                                     <form>
-                                        <input type="text" name="search" placeholder="Your email" required>
+                                        <input type="text" name="search" placeholder="Seu email" required>
                                         <button>Inscrever</button>
                                     </form>
                                 </div>
